objects/disco__Section__c.object
<CustomObject>
    <description>A logical subdivision of a Form Template consisting of Questions</description>
    <fields>
        <fullName>disco__Delete_Setting__c</fullName>
        <defaultValue>&quot;Always&quot;</defaultValue>
        <description>Determines when the trash can icon for deleting Linked Sections is visible.</description>
        <inlineHelpText>Determines when the trash can icon for deleting Linked Sections is visible.</inlineHelpText>
        <label>Delete Setting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Only for new records</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>disco__Dependent_Question_Values__c</fullName>
        <description>Dependency Logic for displaying the section</description>
        <inlineHelpText>Dependency Logic for displaying the section, set by Template Builder</inlineHelpText>
        <label>Dependent Question Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Filter_Logic__c</fullName>
        <description>User input string of Filter Logic for Dependent Sections</description>
        <label>Filter Logic</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Form_Lookup_Sharing__c</fullName>
        <description>relationship name on form if section has sharing related list records enabled</description>
        <inlineHelpText>relationship name on form if section has sharing related list records enabled</inlineHelpText>
        <label>Form Lookup Sharing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Form_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Form Template</label>
        <referenceTo>disco__Form_Template__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__LS_Icon_Color__c</fullName>
        <label>LS Icon Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__LS_Icon__c</fullName>
        <label>LS Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Linked_Section_Expected_Count__c</fullName>
        <description>Expected number of Linked Sections when the form is in use. This number is used for the Template Complexity calculation only.</description>
        <inlineHelpText>Expected number of Linked Sections when the form is in use. This number is used for the Template Complexity calculation only.</inlineHelpText>
        <label>Linked Section Expected Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Linked_Section_Filter_Field__c</fullName>
        <description>Name of the field to filter on for simple filtering of inherited linked Sections</description>
        <inlineHelpText>Name of the field to filter on for simple filtering of inherited linked Sections</inlineHelpText>
        <label>Linked Section Filter Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Linked_Section_Filter_Operator__c</fullName>
        <description>Operator for simple filters for inherited linked Sections</description>
        <inlineHelpText>Operator for simple filters for inherited linked Sections</inlineHelpText>
        <label>Linked Section Filter Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
                <value>
                    <fullName>=</fullName>
                </value>
                <value>
                    <fullName>!=</fullName>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>disco__Linked_Section_Filter_Type__c</fullName>
        <description>Type of filter in effect for inherited linked Sections</description>
        <inlineHelpText>Type of filter in effect for inherited linked Sections</inlineHelpText>
        <label>Linked Section Filter Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>disco__Linked_Section_Filter_Value__c</fullName>
        <description>Comparison value for simple filters for inherited linked sections</description>
        <inlineHelpText>Comparison value for simple filters for inherited linked sections</inlineHelpText>
        <label>Linked Section Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Linked_Section_Lookup_Sharing__c</fullName>
        <description>relationship name on related object if section has sharing related list records enabled</description>
        <inlineHelpText>relationship name on related object if section has sharing related list records enabled</inlineHelpText>
        <label>Linked Section Lookup Sharing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Linked_Section_Object_Type__c</fullName>
        <description>SObject Type of Linked record for linked sections</description>
        <label>Linked Section Object Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Linked_Section_Order_By__c</fullName>
        <description>For shared linked Sections, the field to order the shared records by. Leave blank for name field</description>
        <inlineHelpText>For shared linked Sections, the field to order the shared records by. Leave blank for name field</inlineHelpText>
        <label>Linked Section Order By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Linked_Section_Order_Desc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check so sort the Linked Sections descending instead of ascending</description>
        <inlineHelpText>Check so sort the Linked Sections descending instead of ascending</inlineHelpText>
        <label>Linked Section Order Desc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Linked_Section_Relationship_Name__c</fullName>
        <description>Fieldname of the Lookup field from the Linked Section Object to the Form</description>
        <label>Linked Section Relationship Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Linked_Section_Sharing_Limit__c</fullName>
        <description>For shared linked Sections, the maximum number of entries to share</description>
        <inlineHelpText>For shared linked Sections, the maximum number of entries to share</inlineHelpText>
        <label>Linked Section Sharing Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Linked_Section_Where_Clause__c</fullName>
        <description>For Inherited Linked Sections: Where clause to be applied to records being inherited</description>
        <label>Linked Section Where Clause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Managed_Template_RandomId__c</fullName>
        <description>RandomId of the Managed Template that this section was copied from, if applicable.</description>
        <externalId>true</externalId>
        <inlineHelpText>RandomId of the Managed Template that this section was copied from, if applicable.</inlineHelpText>
        <label>Managed Template RandomId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Number_of_Columns__c</fullName>
        <label>Number of Columns</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Order__c</fullName>
        <description>This defines the position this section will take on a form&apos;s layout.</description>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Page_Break__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checked if a page break is required when viewing the form after this section</description>
        <label>Page Break</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__RandomID__c</fullName>
        <description>random Id generated for section from form builder</description>
        <label>RandomID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Linked Sections that required sections to be being added on the form.</description>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Share_With_Related_List__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checked if the section shares related list records with the related record</description>
        <inlineHelpText>checked if the section shares related list records with the related record</inlineHelpText>
        <label>Share With Related List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Linked</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>disco__Uses_LS_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Records whether the Linked Section has Questions that should be displayed in the LS card on Complete Forms.</description>
        <label>Uses LS Card</label>
        <type>Checkbox</type>
    </fields>
    <label>Section</label>
    <nameField>
        <label>Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>